--- a/src/main.css
+++ b/src/main.css
@@ -14,17 +14,22 @@ html, body {
 }
 
 body {
-  background: #fff;
-  color: #000;
-  font-family: 'Fira Sans', sans-serif;
+  background: #26d0ce;
+  background: linear-gradient(90deg, #1a2980 10%, #26d0ce 90%);
+  color: #fff;
+  font-family: montserrat, sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:link, a:visited, a:active, a:hover {
-  color: blue;
+  color: #def;
 }
+
 a.active {
-  color: #000;
-  text-decoration: none;
+  color: #fff;
 }
 
 header {
@@ -70,6 +75,7 @@ p {
 }
 
 h2 {
+  display: none;
   margin-bottom: .5em;
 }
 
@@ -77,20 +83,43 @@ h2 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: -1em 0 0 -1em;
 }
 
-.app-title__icon {
-  display: block;
+.app-tile {
+  display: flex;
+  flex: 1;
+  min-width: 140px;
+  padding: 1em 0 0 1em;
+  width: 300px;
+}
+
+.app-tile__icon {
   margin: 0 auto;
-  max-height: 128px;
-  max-width: 128px;
+  max-height: 100%;
+  max-width: 100%;
+  flex-grow: 1;
 }
 
-.app-title__link {
-  display: block;
-  min-width: 150px;
-  max-width: 150px;
-  max-height: 250px;
-  max-width: 250px;
+.app-tile__link {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  transition: .1s box-shadow ease-in-out;
+}
+
+.app-tile__link:hover {
+  box-shadow: 0 0 0 3px #fff;
+}
+
+.app-tile__name {
+  background: rgba(255,255,255,.5);
+  color: #333;
+  font-weight: 700;
   padding: 15px;
+  text-transform: uppercase;
+}
+
+.app-tile__description {
+  display: none;
 }
