--- a/src/main.css
+++ b/src/main.css
@@ -21,14 +21,18 @@ body {
 }
 
 a {
+  color: #fff;
   text-decoration: none;
 }
 
-a:link, a:visited, a:active, a:hover {
+header a:link,
+header a:visited,
+header a:active,
+header a:hover {
   color: #def;
 }
 
-a.active {
+header a.active {
   color: #fff;
 }
 
@@ -36,13 +40,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 1em;
+  padding: 15px;
 }
 header a {
-  padding: 1em;
+  padding: 15px;
 }
 header h1 {
-  margin-right: 1em;
+  margin-right: 15px;
 }
 
 .wordmark {
@@ -50,7 +54,7 @@ header h1 {
 }
 
 .content {
-  padding: 1em;
+  padding: 15px;
 }
 
 button, input, select, textarea {
@@ -71,7 +75,7 @@ button, input, textarea {
 }
 
 button {
-  padding: 1em 2em;
+  padding: 15px 30px;
 }
 
 p {
@@ -151,6 +155,52 @@ h2 {
   text-transform: uppercase;
 }
 
-.app-tile__description {
+.app-tile__details {
   display: none;
+}
+
+.app-tile__link:hover .app-tile__details {
+  display: block;
+}
+
+.app-tile__details {
+  font-family: 'Fira Sans', sans-serif;
+  height: 100%;
+  left: 0;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.app-tile__instructions {
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 100%;
+  padding: 90px 15px 15px;
+}
+
+.app-tile__instructions .wrap {
+  width: 480px;
+}
+
+.app-tile__heading {
+  color: #fff;
+  font-weight: 200;
+  font-size: 48px;
+  line-height: 1.2;
+}
+
+.app-tile__tagline {
+  color: #aaa;
+  font-size: 16px;
+  font-weight: 300;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.app-tile__description {
+  font-size: 24px;
+  font-weight: 300;
 }
