--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet" type="text/css" href="//code.cdn.mozilla.net/fonts/fira.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>{{{title}}}</title>
   </head>
