create iframe "browser" for loading VR content

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" type="text/css" href="//code.cdn.mozilla.net/fonts/fira.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
     <title>{{{title}}}</title>
   </head>
   <body>
     {{{content}}}
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
