--- a/src/main.css
+++ b/src/main.css
@@ -211,3 +211,13 @@ h2 {
   font-size: 24px;
   font-weight: 300;
 }
+
+.app-tile__browser {
+  border: 0;
+  display: block;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
