--- a/src/main.css
+++ b/src/main.css
@@ -97,16 +97,8 @@ h2 {
 .app-list-outer {
   bottom: 20px;
   left: 20px;
-  padding: 3px;
   position: absolute;
   right: 20px;
-}
-
-.app-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin: -1em 0 0 -1em;
 }
 
 .scrollable--h {
@@ -124,22 +116,23 @@ h2 {
   overflow-y: hidden;
 }
 
-.app-tile {
-  display: flex;
-  flex: 1;
-  min-width: 250px;
-  padding: 1em 0 0 1em;
-  width: 300px;
+.app-list {
+  margin: -1rem 0 0 -1rem;
+  white-space: nowrap;
 }
 
-.app-tile:last-child {
-  padding-right: 3px;
+.app-tile {
+  display: inline-block;
+  font-size: 0;
+  min-width: 250px;
+  padding: 1rem 0 0 1rem;
+  white-space: normal;
 }
 
 .app-tile__icon {
   margin: 0 auto;
   max-height: 100%;
-  max-width: 232px;
+  max-width: 240px;
   flex-grow: 1;
 }
 
@@ -151,12 +144,13 @@ h2 {
 }
 
 .app-tile__link:hover {
-  box-shadow: 0 0 0 3px #fff;
+  box-shadow: 0 0 0 .2rem #fff;
 }
 
 .app-tile__name {
   background: rgba(255,255,255,.5);
   color: #333;
+  font-size: 16px;
   font-weight: 700;
   padding: 15px;
   text-transform: uppercase;
